syntax = "proto3";

package spine.tools.protoc;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.tools.protoc";
option java_outer_classname = "TestEventsProto";
option java_multiple_files = true;

// This file contains test event types.
//
// The name of the file matches the Spine convension. All the generated classes should implement
// `io.spine.base.EventMessage`.

message UserCreated {
    option (is) = "FirstEvent";

    string id = 1;
}

message UserNotfied {
    string id = 1;
}
